--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,11 @@
-# # # # # # # #
-#   K i k o   #
-# # # # # # # #
-
 # Basic
-name:               "Kording lab"
-title:              "Kording lab at University of Pennsylvania"
-description:        "this is a page for Konrad Kording lab, we are comptational neurosciece and datascience lab at the University of Pennsylvania, Philadelphia"
+name:               "Phi Lab"
+title:              "Phi Lab"
+description:        ""
 
 
 # URL
-url:                http://kordinglab.com
+url:                https://phi-ncu.github.io/
 baseurl:            
 #baseurl:            "" #For Root Domain
 permalink:          /:year/:month/:day/:title.html
@@ -24,14 +20,10 @@ highlighter:        rouge
 nav:
   - name:           "home"
     href:           "/"
-  - name:           "about"
-    href:           "/about"
   - name:           "publications"
-    href:           "/publication"
+    href:           "/publications"
   - name:           "people"
     href:           "/people"
-  - name:           "blog"
-    href:           "/blog"
   - name:           "resources"
     href:           "/resources"
 
